--- a/argocd/my-quarkus-appmatt1-argocd-app-dev.yaml
+++ b/argocd/my-quarkus-appmatt1-argocd-app-dev.yaml
@@ -3,11 +3,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: my-quarkus-appmatt1-dev
-  namespace: janus-argocd
+  namespace: demo
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: janus
+  project: default
   source:
     repoURL: https://github.com/ocp-rhdh-poc/my-quarkus-appmatt1-gitops.git
     targetRevision: HEAD
