--- a/argocd/my-quarkus-appmatt1-argocd-repo.yaml
+++ b/argocd/my-quarkus-appmatt1-argocd-repo.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: my-quarkus-appmatt1-repo
-  namespace: janus-argocd
+  namespace: demo
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
